--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/bmurta/releasesbot#readme",
   "dependencies": {
     "discord.io": "^2.5.3",
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
     "winston": "^3.2.1"
   }
 }
