--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
   "homepage": "https://github.com/bmurta/releasesbot#readme",
   "dependencies": {
     "axios": "^0.19.2",
-    "discord.io": "^2.5.3",
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0",
+    "prettier": "^2.0.5",
     "winston": "^3.2.1"
   }
 }
