--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "discord.js": "^12.2.0",
+    "howlongtobeat": "^1.2.1",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
     "prettier": "^2.0.5",
