--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.19.2",
     "discord.js": "^12.2.0",
     "howlongtobeat": "^1.2.1",
+    "igdb-api-node": "^4.0.4",
     "moment": "^2.26.0",
     "moment-timezone": "^0.5.31",
     "prettier": "^2.0.5",
